--- a/deposit.html
+++ b/deposit.html
@@ -184,7 +184,7 @@
 
   <section style="color: rgb(252, 4, 4);" class="instructions" id="instructions">
     ⚠️ Important Notice:
- if you reuest a deposit but fail to complete the payment within 1 houe!, your accound will be restricted from making withdrawals. Any withdrawal request made under these conditions will be automatically declined. plase ensure your deposit is completed promptly to avoid any issues.
+ if you reuest a deposit but fail to complete the payment within 1 houe!, your accound will be restricted from making withdrawals. Any withdrawal request made under these conditions will be automatically declined. please ensure your deposit is completed promptly to avoid any issues.
 <br><br>
     <section class="account-details">
     <p><strong>Bank Name:</strong> PALMPAY</p>
